include: implementacao do FeignClient para requisições sincronas HTTP + remocao do lombok

--- a/ms-avaliador-credito/src/main/resources/application.yaml
+++ b/ms-avaliador-credito/src/main/resources/application.yaml
@@ -1,9 +1,9 @@
 spring:
   application:
-    name: ms-clientes
+    name: ms-avaliador-credito
 
 server:
-  port: 8082
+  port: 8083
 
 eureka:
   client:
